hphp/test/slow/inout/bad-call-17.php.expectf
Fatal error: `$_ENV` is no longer accessible as a magic global variable. Use the HH\global_* functions instead. in %s/bad-call-17.php on line 4
